# wikipedia-global-message-cleanup

./: README.md  check-last-contribution.py  pyproject.toml  test_modules.py
.github/workflows/: check-style.yml  test.yaml  test.yml
lib/: analyzer.py  api_client.py  models.py  output_writer.py  processor.py
src/: check_last_contribution.py
src/lib/: analyzer.py  api_client.py  models.py  output_writer.py  parsers.py  processor.py
tests/: test_contribution_analyzer.py  test_mediawiki_parser.py  test_models.py
